[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.5.1"
chrono = {version = "0.4.35", default-features = false, features = ["clock"]}
claims = "0.7.1"
config = "0.14.0"
fake = "~2.3"
once_cell = "1.19.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
secrecy = { version = "0.8", features = ["serde"] }
serde = {version = "1.0.197", features = ["derive"]}
serde-aux = "4.5.0"
tokio = {version = "1.36.0", features = ["full"]}
tracing = {version = "0.1.40", features = ["log"]}
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
uuid = {version = "1.8.0", features = ["v4"]}
validator = "0.16"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.12.0"
