[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.5.1"
chrono = {version = "0.4.35", default-features = false, features = ["clock"]}
claims = "0.7.1"
config = "0.14.0"
fake = "~2.3"
once_cell = "1.19.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = { version = "0.8", features=["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = {version = "1.0.197", features = ["derive"]}
serde-aux = "4.5.0"
tokio = {version = "1.36.0", features = ["full"]}
tracing = {version = "0.1.40", features = ["log"]}
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
uuid = {version = "1.8.0", features = ["v4", "serde"]}
validator = "0.16"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
thiserror = "1"
anyhow = "1"
base64 = "0.21"
argon2 = { version = "0.4", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
actix-web-lab = "0.18"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
wiremock = "0.5"
serde_json = "1"
linkify = "0.9"
